# 826_code_2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  assignment2_submission.ipynb  progress.md  pyproject.toml  requirements-lock.txt
configs/: dcc_linear_eval.yaml  dcc_simclr.yaml  dcc_train.yaml  dcc_train_full.yaml  dcc_train_head_only.yaml  dcc_train_last1.yaml  dcc_train_last2.yaml  local_attribution.yaml  local_embeddings.yaml  local_linear_eval.yaml  local_linear_eval_synthetic.yaml  local_mimic_debug.yaml  local_simclr.yaml  local_simclr_synthetic.yaml  local_synthetic.yaml
datatutorial/: datatutorial.txt
docs/: kaggle_cxr_research.md
jobs/: dcc_attribute.sbatch  dcc_attribution.sbatch  dcc_embeddings.sbatch  dcc_linear_eval.sbatch  dcc_pretrain_simclr.sbatch  dcc_train.sbatch
scripts/: bootstrap_env.ps1  bootstrap_env.sh  bootstrap_env_dcc.sh  prepare_mimic_subset.py  prepare_synthetic_data.py  run_dcc_linear_eval.sh  run_dcc_simclr.sh  run_dcc_supervised.sh  run_dcc_train.sh  run_local_full_smoke.ps1  run_local_part4_smoke.ps1  run_local_part4_smoke.sh  run_local_smoke.ps1  run_local_smoke.sh  submit_dcc_pipeline.sh  submit_dcc_supervised_ablation.sh
skills/dcc-physionet-download/: SKILL.md
src/cxr_project/: __init__.py  attribute.py  attribution.py  config.py  embeddings.py  evaluate.py  evaluation.py  extract_attributions.py  linear_eval.py  pretrain_simclr.py  train.py  (+2 more)
tests/: test_attribute_smoke.py  test_datamodule.py  test_gradcam_smoke.py  test_prepare_synthetic.py  test_simclr_datamodule.py  test_simclr_smoke.py  test_train_smoke.py
(+15 files in other folders)
